C/sofa.h


void iauMoon98(double date1, double date2, double pv[2][3]);

int iauPlan94(double date1, double date2, int np, double pv[2][3]);

void iauPmat00(double date1, double date2, double rbp[3][3]);

void iauPmat06(double date1, double date2, double rbp[3][3]);

void iauPmat76(double date1, double date2, double rmatp[3][3]);

void iauPn00(double date1, double date2, double dpsi, double deps,
             double *epsa,
             double rb[3][3], double rp[3][3], double rbp[3][3],
             double rn[3][3], double rbpn[3][3]);

void iauPn00a(double date1, double date2,
              double *dpsi, double *deps, double *epsa,
              double rb[3][3], double rp[3][3], double rbp[3][3],
              double rn[3][3], double rbpn[3][3]);

void iauPn00b(double date1, double date2,
              double *dpsi, double *deps, double *epsa,
              double rb[3][3], double rp[3][3], double rbp[3][3],
              double rn[3][3], double rbpn[3][3]);

void iauPn06(double date1, double date2, double dpsi, double deps,
             double *epsa,
             double rb[3][3], double rp[3][3], double rbp[3][3],
             double rn[3][3], double rbpn[3][3]);